admission/ValidatingAdmissionPolicy/policies/run-as-group/containers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-run-as-group-containers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-run-as-group-containers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-run-as-group-containers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-run-as-group-containers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-run-as-group-containers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: run-as-group-containers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 657580a6-fbdb-5107-a076-6ebc8e529ea9
  labels:
    check-run-as-group-containers.security.kolteq.com/enforce: 'false-true'
    check-run-as-group-containers.security.kolteq.com/audit: 'false-true'
    check-run-as-group-containers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: run-as-group-containers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-run-as-group-containers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
